--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TDD">
-        <activity android:name=".PickMonthActivity"></activity>
+        <activity android:name=".December"></activity>
+        <activity android:name=".November" />
+        <activity android:name=".October" />
+        <activity android:name=".September" />
+        <activity android:name=".August" />
+        <activity android:name=".July" />
+        <activity android:name=".June" />
+        <activity android:name=".May" />
+        <activity android:name=".April" />
+        <activity android:name=".March" />
+        <activity android:name=".February" />
+        <activity android:name=".January" />
+        <activity android:name=".PickMonthActivity" />
         <activity android:name=".AppCompatActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
