Add Back Button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TDD">
-        <activity android:name=".January1"></activity>
+        <activity android:name=".January2"></activity>
+        <activity android:name=".January1" />
         <activity android:name=".December" />
         <activity android:name=".November" />
         <activity android:name=".October" />
@@ -23,7 +24,6 @@
         <activity android:name=".February" />
         <activity android:name=".January" />
         <activity android:name=".PickMonthActivity" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
